<resources>
    <string name="app_name">D&amp;D Character Creator</string>
    <string name="action_settings">Settings</string>
    <string-array name="race_array">
        <item name="Dwarf">Dwarf</item>
        <item name="Elf">Elf</item>
        <item name="Goliath">Goliath</item>
        <item name="Halfling">Halfling</item>
        <item name="Human">Human</item>
        <item name="Dragonborn">Dragonborn</item>
        <item name="Gnome">Gnome</item>
        <item name="Half-Elf">Half-Elf</item>
        <item name="Half-Orc">Half-Orc</item>
        <item name="Tabaxi">Tabaxi</item>
        <item name="Tiefling">Tiefling</item>
        <item name="Warforged">Warforged</item>
    </string-array>
    <string-array name="class_array">
        <item name="Barbarian">Barbarian</item>
        <item name="Bard">Bard</item>
        <item name="Cleric">Cleric</item>
        <item name="Druid">Druid</item>
        <item name="Fighter">Fighter</item>
        <item name="Monk">Monk</item>
        <item name="Paladin">Paladin</item>
        <item name="Ranger">Ranger</item>
        <item name="Rogue">Rogue</item>
        <item name="Sorcerer">Sorcerer</item>
        <item name="Warlock">Warlock</item>
        <item name="Wizard">Wizard</item>
    </string-array>
    <string-array name="alignment_array">
        <item name="lg">Lawful Good</item>
        <item name="ln">Lawful Neutral</item>
        <item name="le">Lawful Evil</item>
        <item name="ng">Neutral Good</item>
        <item name="tn">True Neutral</item>
        <item name="ne">Neutral Evil</item>
        <item name="cg">Chaotic Good</item>
        <item name="cn">Chaotic Neutral</item>
        <item name="ce">Chaotic Evil</item>
    </string-array>
    <string-array name="skill_proficiencies_array">
        <item name="acrobatics">Acrobatics</item>
        <item name="animal_handling">Animal Handling</item>
        <item name="arcana">Arcana</item>
        <item name="athletics">Athletics</item>
        <item name="deception">Deception</item>
        <item name="history">History</item>
        <item name="insight">Insight</item>
        <item name="intimidation">Intimidation</item>
        <item name="investigation">Investigation</item>
        <item name="medicine">Medicine</item>
        <item name="nature">Nature</item>
        <item name="perception">Perception</item>
        <item name="performance">Performance</item>
        <item name="persuasion">Persuasion</item>
        <item name="religion">Religion</item>
        <item name="sleight_of_hand">Sleight of Hand</item>
        <item name="stealth">Stealth</item>
        <item name="survival">Survival</item>
    </string-array>
    <string-array name="ability_scores_array">
        <item name="strength">Strength</item>
        <item name="dexterity">Dexterity</item>
        <item name="constitution">Constitution</item>
        <item name="intelligence">Intelligence</item>
        <item name="wisdom">Wisdom</item>
        <item name="charisma">Charisma</item>
    </string-array>
    <string-array name="languages_array">
        <item name="dwarvish">Dwarvish</item>
        <item name="elvish">Elvish</item>
        <item name="giant">Giant</item>
        <item name="gnomish">Gnomish</item>
        <item name="goblin">Goblin</item>
        <item name="halfling">Halfling</item>
        <item name="orc">Orc</item>
        <item name="abyssal">Abyssal</item>
        <item name="celestial">Celestial</item>
        <item name="deep_speech">Deep Speech</item>
        <item name="draconic">Draconic</item>
        <item name="infernal">Infernal</item>
        <item name="primordial">Primordial</item>
        <item name="sylvan">Sylvan</item>
        <item name="undercommon">Undercommon</item>
    </string-array>
    <string-array name="favored_terrain_array">
        <item name="arctic">Arctic</item>
        <item name="coast">Coast</item>
        <item name="desert">Desert</item>
        <item name="forest">Forest</item>
        <item name="grassland">Grassland</item>
        <item name="mountain">Mountain</item>
        <item name="swamp">Swamp</item>
        <item name="Underdark">Underdark</item>
    </string-array>
    <string-array name="favored_enemies_array">
        <item name="aberrations">Aberrations</item>
        <item name="beasts">Beasts</item>
        <item name="celestials">Celestials</item>
        <item name="constructs">Constructs</item>
        <item name="dragons">Dragons</item>
        <item name="elementals">Elementals</item>
        <item name="fey">Fey</item>
        <item name="fiends">Fiends</item>
        <item name="giants">Giants</item>
        <item name="monstrosities">Monstrosities</item>
        <item name="oozes">Oozes</item>
        <item name="plants">Plants</item>
        <item name="undead">Undead</item>
    </string-array>
    <string name="strength_label">STR</string>
    <string name="dexterity_label">DEX</string>
    <string name="constitution_label">CON</string>
    <string name="intelligence_label">INT</string>
    <string name="wisdom_label">WIS</string>
    <string name="charisma_label">CHA</string>
    <string name="choose_your_characters_name">Choose Your Character\'s Name</string>
    <string name="next_questionnaire_button_label">Next Questionnaire</string>
    <string name="character_creation_introduction">When creating a character in the world of Dungeons and Dragons, the first questions you should ask yourself is what you want your character\'s race, class, and alignment to be. These questions will determine many things such as certain stat bonuses, starting equipment, hit die, and more!</string>
    <string name="stat_rolls_options">The two most common ways to choose your stat values are as follows: Option 1 is to roll 4d6, drop the lowest number, then record the total. Do this 6 times for 6 totals and choose which number to put for each stat. Option 2 is to use the numbers 15, 14, 13, 12, 10, and 8 on whichever stat you choose. The numbers MUST be between 3 and 18. Consult your DM for more options.</string>
    <string name="barbarian_hit_die">As a Barbarian, your hit die is a D12</string>
    <string name="bard_hit_die">As a Bard, your hit die is a D8</string>
    <string name="cleric_hit_die">As a Cleric, your hit die is a D8</string>
    <string name="druid_hit_die">As a Druid, your hit die is a D8</string>
    <string name="fighter_hit_die">As a Fighter, your hit die is a D10</string>
    <string name="monk_hit_die">As a Monk, your hit die is a D8</string>
    <string name="paladin_hit_die">As a Paladin, your hit die is a D10</string>
    <string name="ranger_hit_die">As a Ranger, your hit die is a D10</string>
    <string name="rogue_hit_die">As a Rogue, your hit die is a D8</string>
    <string name="sorcerer_hit_die">As a Sorcerer, your hit die is a D6</string>
    <string name="warlock_hit_die">As a Warlock, your hit die is a D8</string>
    <string name="wizard_hit_die">As a Wizard, your hit die is a D6</string>
    <string name="starting_gp_roll">For your starting gold, roll </string>
    <string name="proficiency_text">Choose from the following Skills to be proficient in</string>
    <string name="starting_equipment">Choose your starting equipment below</string>
    <string name="starting_equipment_info">In addition to your above choices, you also start with </string>
    <string name="other_proficiency_beginning">You also have proficiency with </string>
    <string name="final_warning">Once you are sure your character is set the way you want them, click the Finished button below. Be sure to check out the \"Character\" tab to describe their looks, personality, and backstory. And if your character class has Spellcasting capabilities, go to the \"Spellcasting\" tab to set up their list of known spells.</string>
    <string name="finished_button_label">Finished</string>
    <string name="str_label">STR: </string>
    <string name="dex_label">DEX: </string>
    <string name="con_label">CON: </string>
    <string name="int_label">INT: </string>
    <string name="wis_label">WIS: </string>
    <string name="cha_label">CHA: </string>
    <string name="proficiency_bonus_label">Proficiency Bonus: </string>
    <string name="armor_class_label">AC: </string>
    <string name="hit_die_label">Hit Die: </string>
    <string name="current_hit_points_label">Current Hit Points: </string>
    <string name="max_hit_points_label">Max Hit Points: </string>
    <string name="armor_class">Armor Class:</string>
    <string name="current_max_hp">current/max HP:</string>
    <string name="proficiencies">Proficiencies</string>
    <string name="death_saves_label">Death Saves</string>
    <string name="death_saves_success_1">Success 1</string>
    <string name="death_saves_success_2">Success 2</string>
    <string name="death_saves_stabilized">Stabilized</string>
    <string name="death_saves_failure_1">Failure 1</string>
    <string name="death_saves_failure_2">Failure 2</string>
    <string name="death_saves_death">Death</string>
    <string name="skill_modifiers">Skill Modifiers</string>
    <string name="strength_skills">Strength Skills</string>
    <string name="dexterity_skills">Dexterity Skills</string>
    <string name="intelligence_skills">Intelligence Skills</string>
    <string name="wisdom_skills">Wisdom Skills</string>
    <string name="charisma_skills">Charisma Skills</string>
    <string name="acrobatics_label">Acrobatics</string>
    <string name="animal_handling_label">Animal Handling</string>
    <string name="arcana_label">Arcana</string>
    <string name="athletics_label">Athletics</string>
    <string name="deception_label">Deception</string>
    <string name="history_label">History</string>
    <string name="insight_label">Insight</string>
    <string name="intimidation_label">Intimidation</string>
    <string name="investigation_label">Investigation</string>
    <string name="medicine_label">Medicine</string>
    <string name="nature_label">Nature</string>
    <string name="perception_label">Perception</string>
    <string name="performance_label">Performance</string>
    <string name="persuasion_label">Persuasion</string>
    <string name="religion_label">Religion</string>
    <string name="sleight_of_hand_label">Sleight of Hand</string>
    <string name="stealth_label">Stealth</string>
    <string name="survival_label">Survival</string>
    <string name="first_level_spell">1st Level</string>
    <string name="second_level_spell">2nd Level</string>
    <string name="third_level_spell">3rd Level</string>
    <string name="fourth_level_spell">4th Level</string>
    <string name="fifth_level_spell">5th Level</string>
    <string name="sixth_level_spell">6th Level</string>
    <string name="seventh_level_spell">7th Level</string>
    <string name="eighth_level_spell">8th Level</string>
    <string name="ninth_level_spell">9th Level</string>
    <string name="spells_known">Spells</string>
    <string name="cantrips_known">Cantrips</string>
    <string name="cp_label">CP:</string>
    <string name="sp_label">SP:</string>
    <string name="ep_label">EP:</string>
    <string name="gp_label">GP:</string>
    <string name="pp_label">PP:</string>
    <string name="add_item">Add Item</string>
    <string name="ability_score_improvement">Choose 2 skills to improve by 1 point, to a maximum of 20. You may choose the same skill for both points.</string>
    <string name="proficiency_bonus_improvement">Your proficiency bonus has improved to</string>
    <string name="new_spell_level">You now have access to spells of level</string>
    <string name="new_level">You are now level</string>
    <string name="level_up_bonuses">The following bonuses are applied to your character</string>
    <string name="finish_character">Finish Character</string>
</resources>