<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/new_level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/new_level"/>
    <TextView
        android:id="@+id/level_up_bonuses_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingBottom="16dp"
        android:text="@string/level_up_bonuses"/>

    <TextView
        android:id="@+id/new_spell_level"
        style="@style/bonusStatsStyle"
        android:text="@string/new_spell_level"/>
    <TextView
        android:id="@+id/proficiency_bonus_improvement"
        style="@style/bonusStatsStyle"
        android:text="@string/proficiency_bonus_improvement"/>

    <TextView
        android:id="@+id/ability_score_improvement_header"
        style="@style/bonusStatsStyle"
        android:text="@string/ability_score_improvement"/>
    <Spinner
        android:id="@+id/ability_score_improvement_1"
        android:visibility="gone"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/ability_scores_array"/>
    <Spinner
        android:id="@+id/ability_score_improvement_2"
        android:visibility="gone"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/ability_scores_array"/>

    <EditText
        android:id="@+id/more_hp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:inputType="number"
        android:hint="@string/barbarian_hit_die"/>

    <TextView
        android:id="@+id/bonus_stats_addition_1"
        style="@style/bonusStatsStyle"
        android:text="Bonus Stats Addition"/>
    <TextView
        android:id="@+id/bonus_stats_addition_2"
        style="@style/bonusStatsStyle"
        android:text="Bonus Stats Addition"/>
    <TextView
        android:id="@+id/bonus_stats_addition_3"
        style="@style/bonusStatsStyle"
        android:text="Bonus Stats Addition"/>
    <TextView
        android:id="@+id/bonus_stats_addition_4"
        style="@style/bonusStatsStyle"
        android:text="Bonus Stats Addition"/>
    <TextView
        android:id="@+id/bonus_stats_addition_5"
        style="@style/bonusStatsStyle"
        android:text="Bonus Stats Addition"/>

    <TextView
        android:id="@+id/character_choice_1_header"
        style="@style/bonusStatsStyle"
        android:text="Make a choice here"/>
    <Spinner
        android:id="@+id/character_choice_1"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:id="@+id/character_choice_2_header"
        style="@style/bonusStatsStyle"
        android:text="Make a choice here"/>
    <Spinner
        android:id="@+id/character_choice_2"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <Button
        android:id="@+id/finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginRight="4dp"
        android:layout_marginEnd="4dp"
        android:textSize="16sp"
        android:text="@string/finished_button_label"/>

</LinearLayout>
