<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/proficiency_text"/>

        <Spinner
            android:id="@+id/skill_proficiency_choices_spinner_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/skill_proficiency_choices_spinner_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/skill_proficiency_choices_spinner_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/skill_proficiency_choices_spinner_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/other_proficiencies"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/other_proficiency_beginning"/>

        <TextView
            android:id="@+id/starting_hp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/starting_hp_and_hit_die"/>

        <TextView
            android:id="@+id/level_one_choice_text_1"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/level_one_choice_spinner_1"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/level_one_choice_text_2"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/level_one_choice_spinner_2"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/level_one_choice_text_3"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/level_one_choice_spinner_3"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/starting_equipment"/>

        <Spinner
            android:id="@+id/starting_equipment_spinner_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/starting_equipment_spinner_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/starting_equipment_spinner_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Spinner
            android:id="@+id/starting_equipment_spinner_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/extra_starting_equipment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/starting_equipment_info"/>

        <EditText
            android:id="@+id/starting_gold_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/starting_gp_roll"
            android:importantForAutofill="no" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/final_warning"/>

        <Button
            android:contentDescription="@string/finish_character"
            android:id="@+id/button_finished_character_creation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_gravity="end"
            android:text="@string/finished_button_label"
            android:layout_marginEnd="16dp" />
    </LinearLayout>
</ScrollView>
